[tool.poetry]
name = "financer"
version = "0.1.0"
description = ""
authors = ["Alexander Schaub <alexander.schaub@helixton.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
financer = "financer:main"